@@ -650,4 +650,5 @@ BUGFIXES:
 582 ==> 401438 - Calendar plugin prints improper month names (Czech localization).
 583 ==> 401515 - Export to OneDrive: created subfolders not correctly managed.
 584 ==> 401516 - Export to (Onedrive, Dropbox ...): list of subfolders not correctly displayed (problems if several subfolders have the same name).
-585 ==> 
+585 ==> 401645 - Digikam crashes on possibly damaged video-file.
+586 ==> 
